--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.datasource.url=jdbc:mysql://localhost:3306/auto_auctions
+spring.datasource.username=root
+spring.datasource.password=
+spring.sql.init.mode=always
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=validate
